# AutoPilot

./: .gitignore  DEVLOG.md  readme.md
catkin_ws/src/adas_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/adas_bringup/config/: system_config.yaml
catkin_ws/src/adas_bringup/launch/: adas_debug.launch  adas_full_real.launch  adas_full_sim.launch
catkin_ws/src/adas_bringup/rviz/: adas_visualization.rviz
catkin_ws/src/adas_control/: CMakeLists.txt  package.xml
catkin_ws/src/adas_control/config/: real_vehicle.yaml  sim_vehicle.yaml
catkin_ws/src/adas_control/launch/: control_real.launch  control_sim.launch
catkin_ws/src/adas_control/scripts/: brake_actuator.py  vehicle_controller.py
catkin_ws/src/adas_decision/: CMakeLists.txt  package.xml
catkin_ws/src/adas_decision/config/: aeb_thresholds.yaml
catkin_ws/src/adas_decision/launch/: decision.launch
catkin_ws/src/adas_decision/scripts/: aeb_fsm.py  ttc_calculator.py
catkin_ws/src/adas_hal/: CMakeLists.txt  package.xml
catkin_ws/src/adas_hal/launch/: hal_real.launch  hal_simulation.launch
catkin_ws/src/adas_hal/scripts/: sensor_bridge_carla.py  sensor_bridge_real.py
catkin_ws/src/adas_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/adas_msgs/msg/: AEBState.msg  Obstacle.msg  ObstacleArray.msg  SafetyStatus.msg  TTCInfo.msg
catkin_ws/src/adas_msgs/srv/: SetAEBMode.srv
catkin_ws/src/adas_perception/: CMakeLists.txt  package.xml
catkin_ws/src/adas_perception/config/: lidar_params.yaml
catkin_ws/src/adas_perception/launch/: perception.launch
catkin_ws/src/adas_perception/scripts/: camera_detector.py  lidar_processor.py  obstacle_tracker.py
catkin_ws/src/adas_perception/src/: pointcloud_filter.cpp
catkin_ws/src/adas_safety/: CMakeLists.txt  package.xml
catkin_ws/src/adas_safety/config/: safety_rules.yaml
catkin_ws/src/adas_safety/launch/: safety.launch
catkin_ws/src/adas_safety/scripts/: heartbeat_watchdog.py  safety_monitor.py
catkin_ws/src/adas_safety/src/: safety_watchdog.cpp
scenarios/: cut_in.xosc  lead_vehicle_sudden_stop.xosc
scripts/: analyze_latency.py  launch_carla.sh  run_scenario_test.sh  start_adas_system.sh  start_all.sh
