<?xml version="1.0"?>
<package format="2">
  <name>adas_bringup</name>
  <version>0.1.0</version>
  <description>ADAS System Bringup - Launch files for complete system</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>adas_msgs</exec_depend>
  <exec_depend>adas_perception</exec_depend>
  <exec_depend>adas_decision</exec_depend>
  <exec_depend>adas_safety</exec_depend>
  <exec_depend>adas_control</exec_depend>
  <exec_depend>adas_hal</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export></export>
</package>
