<?xml version="1.0"?>
<package format="2">
  <name>adas_control</name>
  <version>0.1.0</version>
  <description>ADAS Vehicle Control Interface</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
