<?xml version="1.0"?>
<package format="2">
  <name>adas_decision</name>
  <version>0.1.0</version>
  <description>ADAS Decision Logic - TTC calculation and AEB FSM</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <exec_depend>python3-numpy</exec_depend>

  <export></export>
</package>
