<?xml version="1.0"?>
<package format="2">
  <name>adas_perception</name>
  <version>0.1.0</version>
  <description>ADAS Perception Stack - LiDAR and Camera processing</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>

  <export></export>
</package>
