<?xml version="1.0"?>
<package format="2">
  <name>adas_safety</name>
  <version>0.1.0</version>
  <description>ADAS Functional Safety Monitor - ISO 26262 compliant</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
